<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="com.josevargas.mysql3.User_login">

    <item android:id="@+id/menu_facturacion"
        android:title="@string/facturacion"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/menu_añadir_productos"
        android:title="@string/config_prod"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/about1"
        android:title="@string/about"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/menu_salir"
        android:title="@string/salir"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
