<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.example.ga.supertienda.Facturacion">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">


            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fact_et_buscar"
                android:hint="@string/code"
                android:inputType="number"
                android:layout_marginTop="15dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/b_buscar"
                android:drawableLeft="@drawable/ico_buscar"
                android:text="@string/bbuscar"/>

            <ListView
                android:id="@+id/listAllProducts2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:dividerHeight="2dp"
                android:background="#fff"/>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/fact_et_cantidad"
                    android:ems="3"
                    android:inputType="number"
                    android:hint="@string/cant"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=" AGREGAR"
                    android:drawableLeft="@drawable/ico_agregar"
                    android:id="@+id/b_agregar"/>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@android:color/black"
                android:layout_marginTop="10dp"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:id="@+id/et_efectivo"
                android:hint="@string/efectivo"
                android:textSize="30dp"
                android:inputType="number"/>



            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/factu"
                android:drawableLeft="@drawable/ico_facturar"
                android:id="@+id/b_finalizar"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >
                <ListView
                    android:id="@+id/list_sell_Products"
                    android:layout_width="match_parent"
                    android:layout_height="218dp"
                    android:dividerHeight="2dp"
                    android:background="#fff"
                    android:stackFromBottom="true"
                    android:transcriptMode="alwaysScroll"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="109dp"

                android:text="Total"
                android:id="@+id/tv_total"
                android:textSize="40sp"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ico_total"
                android:gravity="center_vertical"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
